--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cp"
+name = "coe164_CP"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 embedded-hal = "0.2.7"
